# core

./: .coveragerc  .devcontainer.json  .drone.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  _config.yml  pyproject.toml  setup.cfg  setup.py
docs/: events.md  flow.md  index.md  queues.md  workers.md
eventsflow/: cli.py  events.py  utils.py  version.py
eventsflow/flow/: __init__.py  parser.py  process.py  settings.py
eventsflow/queues/local/: __init__.py  context.py  queues.py
eventsflow/registries/: queues.py  workers.py
eventsflow/workers/: process.py  settings.py
scripts/: post-cleanup.sh  pre-cleanup.sh  release.sh
test/: test_common.py  test_events.py  test_utils.py
test/flow/: test_flow.py  test_flow_parser.py
test/queues/local/: test_events_queue.py
test/registries/: test_queue_registry.py  test_workers_registry.py  test_workers_registry_flow.py
test/resources/extra_vars/: corrupted.json  corrupted.yaml
test/resources/flows/: flow-corrupted.yaml  no-queue-type.yaml  no-worker-type.yaml  simple-flow.yaml  simple-template.yaml
test/workers/: test_process_worker.py  test_worker_settings.py
test/workers/process/: common.py  test_process_worker_basics.py  test_process_worker_queuing.py
tests/: common_libs.py  test_common.py  test_events.py  test_utils.py  test_utils_load_extra_vars.py
tests/flow/: test_flow_parser.py  test_flow_process.py
tests/queues/local/: test_events_queue.py
tests/registries/: test_queue_registry.py  test_workers_registry.py  test_workers_registry_flow.py
tests/resources/extra_vars/: vars.yaml
tests/resources/flows/: simple-template-result.yaml  unspecified-placeholder.yaml
tests/workers/: test_worker_settings.py
tests/workers/process/: test_process_worker_basics.py  test_process_worker_queuing.py
