[metadata]
name = eventsflow-core
description = Events Flow Core components
url = https://gitlab.com/eventsflow/core
author = ownport
author_email=ownport@gmail.com
license = MIT License
license_file = LICENSE
classifiers = 
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Operating System :: Unix
keywords = 
    eventsflow
    pipeline
    dataflow

[options]
packages = find_namespace:
install_requires=
    jinja2 == 2.11.2
    pyyaml == 5.3.1
python_requires = 
    >=3.8
zip_safe = True

# [options.extras_require]
# test = 
#     pytest 
#     pytest-cov
#     pytest-pep8

[options.entry_points]
console_scripts =
    eventsflow = eventsflow.cli:launch_new_instance

[options.packages.find]
exclude=tests*

# [tool.pytest]
# junit_family=xunit2
